k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-deployment
    namespace: lgcns

spec:
    # 자원공간의 낭비를 방지하고 관리의 편의성을 제공
    revisionHistoryLimit: 2

    replicas: 2
    selector:
        matchLabels:
            app: order-pod

    template:
        metadata:
            labels:
                app: order-pod

        spec:
            # docker container
            containers:
                -   name: order-container

                    # ecr 경로
                    image: 957143340841.dkr.ecr.us-west-2.amazonaws.com/order-jylee-backend:latest

                    ports:
                        -   containerPort: 8888

                    # k8s-secret에 설정한 정보를 외부변수로 application.yml에 전달
---
# core service setting
apiVersion: v1
kind: Service
metadata:
    name: order-service
    namespace: lgcns
spec:
    type: ClusterIP
    ports:
        -   port: 80
            targetPort: 8888
    selector:
        app: order-pod
