k8s/order-ingress.yml
# aws nlb -> ingress controller(pod) -> ingress -> service -> pod

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: order-ingress
    namespace: lgcns
    annotations:
        # kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
    ingressClassName: nginx
    rules:
        # 레코드로 등록한 도메인 이름
        -   host: server.inspireseop2283.shop
            http:
                paths:
                    # http://server.inspireseop2283.shop/
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: order-service
                                port:
                                    number: 80
